--- a/style.css
+++ b/style.css
@@ -2,9 +2,12 @@
     margin: 0;
     padding: 0;
 }
+body{
+   font-family: sans-serif;
+}
 .icon{
     max-width: 1500px;
-    margin-left: 40px;
+    margin-left: 20px;
     margin-top: 20px;
     height: 40px;
 }
@@ -72,11 +75,13 @@ font-weight: bold;
     margin-top: 15px;
     margin-left: 30px;
     display: flex;
+    gap: 10px;
 }
 .thirdnav a{
     text-decoration: none;
     color: #000;
-    font-size: 17px;
+    font-size: 14px;
+    font-weight: 600;
     display: block;
     padding: 10px 10px;
 }
@@ -90,22 +95,23 @@ font-weight: bold;
     display: none;
 }
 .firstimage{ 
-   max-width: 1090px;
+   max-width: 1290px;
     height: 600px;
+    /* display: none; */
     background-image: url("./images/abelton.avif");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
 position: relative;
-left: 10.4%;
+left: 7%;
     margin-top: 20px;
 }
 .abelton{
    max-width: 70px;
    height: 70px;
    position: relative;
-   left: 35%;
-   margin-top: -335px;
+   left: 34%;
+   margin-top: -365px;
    margin-bottom: 380px; 
 }
 .thirdparent{
@@ -120,8 +126,6 @@ left: 10.4%;
     max-width: 630px;
     margin-left: auto;
     margin-right: auto;
-     font-family: sans-serif;
-    
     line-height: 1.6;
 }
 .blue{
@@ -129,16 +133,15 @@ left: 10.4%;
 }
 .secondparagraph{
     margin-top: 30px;
-    font-size: 20px;
+    /* font-size: 20px; */
     margin-bottom: 20px;
-    margin-left: 360px;
+    margin-left: 420px;
     margin-right: auto;
-    max-width: 620px;
-     align-items: justify; 
+    max-width: 800px;
+     align-items: justify;
     font-weight: normal;
-    font-family: sans-serif;
-    line-height: 1.7;
-    font-size: 1rem;
+    line-height: 1.8;
+    font-size: 1.3rem;
 }
 .fourthparent{
      max-width: 1500px; 
@@ -152,16 +155,16 @@ left: 10.4%;
      width: 100%; 
     margin-top: 90px;
     background-color: #fbffa7;
-   height: 730px;
+   height: 800px;
    position: absolute;
-    left: 40.6%; 
+    left: 46.5%; 
 }   
  .secondimage img{ 
-    height: 550px;
-    min-width: 550px;
+    height: 580px;
+    min-width: 560px;
     position: absolute;
-   left: 9%;
-   top: 20%;
+   left: 15%;
+   top: 23%;
 }
 .thirdimage img{ 
     height: 350px;
@@ -174,25 +177,24 @@ left: 10.4%;
     max-width: 1520px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
+    margin-top: 120px;
 }
  .thirdparagraph{
-    max-width: 590px;
-    margin-left: 340px;
+    max-width: 650px;
+    margin-left: 400px;
     margin-right: auto;
-    line-height: 1.4;
-    font-family: sans-serif;
+    line-height: 1.6;
     font-weight: 100;
+    letter-spacing: 1px;
  }
 .fourthparagraph{
-    font-size: 17px;
+    font-size: 1.3rem;
     margin-top: 30px;
-    max-width: 670px;
-    margin-left: 340px;
+    max-width: 800px;
+    margin-left: 400px;
     margin-right: auto;
-     font-family: sans-serif;
     line-height: 1.7;
-    
+    /* letter-spacing: 2px; */
 }
 .sixthparent{
     max-width: 1500px;  
@@ -204,30 +206,30 @@ left: 10.4%;
     margin-left: 40px;
 }
 .sixthparent p{
-    margin-left: -470px;
+    margin-left: -450px;
     margin-top: 10px;
 }
 .seventhparent{
     max-width: 1500px;
-    margin-top: 90px;
+    margin-top: 150px;
 }
 .fifthparagraph{
-    max-width: 630px;
-    margin-left: 350px;
+    max-width: 700px;
+    margin-left: 420px;
     margin-right: auto;
-    line-height: 1.4;
-    font-family: sans-serif;
+    line-height: 1.6;
+    letter-spacing: 1px;
 }
 .sixthparagraph{
-    max-width: 655px;
+    max-width: 810px;
     margin-top: 40px;
     font-size: 17px;
     margin-bottom: 90px;
-    margin-left: 350px;
+    margin-left: 420px;
     margin-right: auto;
     font-weight: normal;
     line-height: 1.7;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
 } 
 .eightparent{
     max-width: 1500px;
@@ -266,21 +268,22 @@ margin-bottom: 100px;
     max-width: 1500px;
 }
 .seventhparagraph{
-    max-width: 650px;
+    max-width: 660px;
     margin-left: auto;
     margin-right: auto;
-    line-height: 1.4;
+    line-height: 1.7;
+    letter-spacing: 1px;
     font-family: sans-serif;
 }
 .eighthparagraph{
     margin-top: 30px;
     font-size: 17px;
-    margin-left: 350px;
+    margin-left: 420px;
     margin-right: auto;
-    max-width: 680px;
+    max-width: 820px;
     font-weight: normal;
-    line-height: 1.5;
-    font-size: 1.2rem;
+    line-height: 1.7;
+    font-size: 1.3rem;
 }
 .seventhimage{
     height: 700px;
@@ -291,27 +294,29 @@ margin-bottom: 100px;
     margin-bottom: 50px;
 }
 .seventhimage img{
-   max-width: 1100px;   
+   width: 100%;
+   max-width: 1250px;   
 }
 .eleventhparent{
     max-width: 1500px;
 }
 .ninethparagraph h2{
-    max-width: 650px;
+    max-width: 700px;
     position: relative;
     left: 28%;
     margin-right: auto;
-    line-height: 1.4;
-    font-family: sans-serif;
+    line-height: 1.7;
+    letter-spacing: 1px;
+    margin-top: 150px;
 }
 .ninethparagraph p{
-    max-width: 650px;
+    max-width: 790px;
     margin-top: 20px;
-    margin-left: 380px;
+    margin-left: 420px;
     margin-right: auto;
-    line-height: 1.4;
-    font-size: 17px;
-    font-family: sans-serif;
+    line-height: 1.7;
+    font-size: 1.3rem;
+   
 }
 .twelvethparent{
     max-width: 1500px;
@@ -320,7 +325,7 @@ margin-bottom: 100px;
     max-width: 900px;
     height: 800px;
     background-color: #d5b3ff;
-    margin-top: 110px;
+    margin-top: 150px;
     position: relative;
     left: 17%;
 }
@@ -352,31 +357,31 @@ margin-bottom: 100px;
     margin-top: 120px;
  }
  .tenthparagraph h2{
-  max-width: 650px;
+  max-width: 720px;
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
-  line-height: 1.4;
-  font-family: sans-serif;
+  line-height: 1.7;
   font-weight: 600;
+  letter-spacing: 1px;
  }
  .tenthparagraph p{
     margin-top: 30px;
-    max-width: 590px;
+    max-width: 790px;
     margin-left: 350px;
     margin-right: auto;
     line-height: 1.7;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
  }
  .fourteenparent{
     max-width: 1500px;
-    margin-top: 60px;
+    margin-top: 100px;
     margin-bottom: 60px;
     display: flex;
     position: relative;
  }
  .ninethimage img{
-    max-width: 600px;
+    max-width: 650px;
     height: 580px;
    position: relative;
     left: 20%; 
@@ -387,13 +392,14 @@ margin-bottom: 100px;
      max-width: 600px;
     width: 40%;  
     position: absolute;
-     left: 52.2%; 
+     left: 52%; 
  }
  .fourthcolor h2{
-    text-align: center;
     margin-top: 150px;
-    max-width: 290px;
-    margin-left: 100px;
+    max-width: 370px;
+    margin-left: 150px;
+    line-height: 1.7;
+    letter-spacing: 1px;
  }
  .fourthcolor h3{
     text-align: center;
@@ -417,8 +423,6 @@ margin-bottom: 100px;
     display: flex;
     justify-content: space-between;
     margin-left: 100px;
-     
-    font-family: sans-serif;
  }
   .from{
     margin-top: -20px;
@@ -426,31 +430,30 @@ margin-bottom: 100px;
  .from p{
 margin-top: 10px;
  }
- .catch p{
-    margin-top: 10px;
+ .catch p,
+ .college p,
+ .college{
+    margin-top: 15px;
  }
- .college p{
-    margin-top: 10px;
-    max-width: 520px;
- } 
  .college input{
     height: 40px;
     margin-left: 5px;
     width: 300px;
     margin-top: 20px;
     margin-bottom: 50px;
+    padding-left: 10px;
     background-color:  #eee;
  }
   .sign{
    width: 80px;
-   height: 24px;
+   height: 22px;
    border: 1px solid none;
    border-radius: none;
    background-color: blue;
    color: #fff;
    position: relative;
-    left: 60%; 
-    margin-top: -94px; 
+    left: 59.5%; 
+    margin-top: -92px; 
     margin-bottom: 70px;
     text-align: center;
     padding: 10px 10px 10px 10px;
@@ -460,9 +463,10 @@ margin-top: 10px;
  .parents{
     display: flex;
     font-size: 30px;
-    
+    margin-left: -5px;
  }
  .parents i{
+   margin-top: 20px;
     margin-left: 7px;
  }
   .seventeenparent{
@@ -476,13 +480,14 @@ margin-top: 10px;
     margin-top: -10px;
  }
  .draw p{
-    margin-top: 10px;
+    margin-top: 15px;
  }
  .meet{
+ 
     margin-left: 30px;
  }
  .meet p{
-    margin-top: 10px;
+   margin-top: 15px;
  }
  .rain{
     margin-left: 200px;
@@ -497,6 +502,7 @@ margin-top: 10px;
     margin-bottom: 100px;
  } 
  select{
+   width: 100px;
    height: 30px;
    margin-top: 10px;
    background-color: #eee;
@@ -534,10 +540,11 @@ margin-top: 10px;
   
  @media only screen and (max-width: 600px){
      .firsticon{
-        max-width: 280px;
+        max-width: 350px;
     }
-   .icon{
-      max-width: 280px;
+   .icon svg{
+   height: 28px;
+   margin-left: -20px;
    }
     .firstnav{
         display: none;
@@ -561,8 +568,8 @@ margin-top: 10px;
     }
     .thirdnav h5{
         display: block;
-        margin-top: -45px;
-        margin-left: -50px;
+        margin-top: -50px;
+        margin-left: -120px;
         font-size: 15px;
         font-family: sans-serif;
     }
@@ -574,10 +581,10 @@ margin-top: 10px;
     font-size: 10px;
 }
 .firstimage{
-    margin-right: 10px;
-    width: 300px;
-    height: 400px;
-    margin-left: -10px;
+    /* margin-right: 10px; */
+    max-width: 290px;
+    height: 500px;
+    margin-left: -5px;
 }
 .abelton svg{
    width: 160px;
@@ -593,19 +600,19 @@ margin-top: 10px;
     font-size: 12px;
     
     margin-left: 30px;
-    margin-top: -90px;
+    margin-top: -50px;
 }
 .secondparagraph{
-    width: 300px;
+    max-width: 305px;
     font-size: 14px;
     margin-left: 30px;
     margin-top: 10px;
 }
 .fourthparent{
     max-width: 340px;
-    margin-left: 28px;
+    /* margin-left: 0px; */
     margin-top: -80px;
-    overflow: auto;
+    overflow: hidden;
 }
 .firstcolor{
     max-width: 200px;
@@ -616,7 +623,7 @@ margin-top: 10px;
     min-width: 150px;
     margin-left: -20px;
     height: 150px;
-    margin-top: -60px;
+    margin-top: -90px;
 }
 .thirdimage img{
     min-width: 130px;
@@ -631,14 +638,14 @@ margin-top: 10px;
     overflow: auto;
 }
 .thirdparagraph{
-    width: 330px;
+    max-width: 330px;
     font-size: 12px;
     margin-left: 20px;
     margin-top: 10px;
 }
 .fourthparagraph{
     margin-left: 20px;
-    width: 280px;
+    width: 300px;
     font-size: 14px;
     margin-top: 10px;
 }
@@ -646,44 +653,47 @@ margin-top: 10px;
    margin-top: -10px;
 }
  .sixthparent iframe{
-    width: 280px;
+   overflow: hidden;
+    max-width: 280px;
     height: 170px;
-     margin-left: -30px; 
+     margin-left: -10px; 
      margin-top: 20px;
  }
  .sixthparent p{
    max-width: 200px;
-   margin-left: 20px;
+   margin-left: 30px;
    font-size: 13px;
  }
  .seventhparent{
-   max-width: 350px;
+   max-width: 330px;
    margin-top: 20px;
-   overflow: auto;
+   overflow: hidden;
+   margin-left: 25px;
  }
  .fifthparagraph{
-    width: 320px;
+    max-width: 320px;
     font-size: 13px;
     margin-left: 20px;
  }
  .sixthparagraph{
-    width: 320px;
+    max-width: 310px;
     margin-left: 20px;
     font-size: 14px;
     margin-top: 20px;
  }
  .eightparent{
    margin-top: -60px;
+   overflow: hidden;
  }
  .secondcolor{
-    height: 250px;
+    height: 290px;
     width: 200px; 
  }
  .fourthimage img{
    height: 80px;
    width: 120px;
    margin-left: -2px;
-   margin-top: 20px;
+   margin-top: 40px;
  }
  .fifthimage img{
    height: 80px;
@@ -695,115 +705,128 @@ margin-top: 10px;
    margin-top: -70px;
  }
  .sixthimage img{
-   height: 140px;
+   height: 170px;
    min-width: 130px;
    margin-top: -160px;
-   margin-left: -20px;
+   margin-left: -30px;
+ }
+ .ninethparent{
+   overflow: hidden;
+   margin-left: 10px;
  }
  .seventhparagraph{
-    width: 305px;
+    max-width: 300px;
     margin-left: 20px;
     font-size: 12px;
+    letter-spacing: -1px;
  }
  .eighthparagraph{
-    width: 290px;
+    max-width: 320px;
     margin-left: 20px;
     font-size: 14px;
     margin-top: 20px;
     margin-bottom: -90px;
  }
+ .tenthparent{
+   overflow: hidden;
+ }
  .seventhimage img{
-    max-width: 290px;
+   margin-top: -90px;
+    min-width: 330px;
     margin-left: -90px;
  }
  .eleventhparent{
-   margin-top: -550px;
+   margin-top: -750px;
     margin-left: -30px;
  }
   
  .ninethparagraph{
-    width: 260px;
-    font-size: 14px;
+    /* width: 260px; */
+    /* font-size: 14px;
     margin-left: 30px;
-    margin-top: -40px;
+    margin-top: -40px; */
  }
  .ninethparagraph h2{
-    margin-left: -45px;
+   letter-spacing: -1px;
+    margin-left: -55px;
     font-size: 16px;
     width: 260px;
  }
  .ninethparagraph p{
-   margin-left: 30px;
-   font-size: 12px;
+   max-width: 300px;
+   margin-left: 60px;
+   font-size: 14px;
  }
  .twelvethparent{
    max-width: 350px;
    overflow: auto;
-   margin-top: -60px;
+   margin-top: -120px;
  }
  .thirdcolor{
-    height: 200px;
+    height: 250px;
     margin-left: -80px;
-    width: 260px;
+    width: 250px;
     margin-left: -20px;
     margin-bottom: 10px;
  }
  .image img{
-   height: 80px;
-   width: 120px;
-   margin-top: 450px;
+   height: 100px;
+   width: 130px;
+   margin-top: 400px;
    margin-left: -2px;
  }
  .eighthimage img{
-   height: 140px;
+   height: 170px;
    min-width: 140px;
-   margin-top: 500px;
-   margin-left: -10px;
+   margin-top: 460px;
+   margin-left: -30px;
  }
  .thirteenparent{
-    max-width: 280px;
+    max-width: 330px;
    margin-top: -30px;
-   overflow: auto;
+   overflow: hidden;
  }
- .tenthparagraph{
-    width: 320px;
-    font-size: 11px;
-    margin-left: 20px;
-    margin-top: 10px;
+ .tenthparagraph h2{
+    min-width: 300px;
+    font-size: 16px;
+    margin-left: 30px;
+    margin-top: 50px;
+    letter-spacing: -1px;
  }
  .tenthparagraph p{
      font-size: 14px;
-    max-width: 270px;
-     margin-left: 5px; 
+    max-width: 290px;
+     margin-left: 30px; 
      margin-top: 10px;
  }
  .fourteenparent{
     max-width: 280px;
     display: inline-block;
     margin-top: -60px;
-    margin-bottom: 190px;
+    margin-bottom: 250px;
  }
  .ninethimage img{
-    height: 150px;
+    height: 180px;
     width: 270px;
     margin-left: -20px;
  }
  .fourthcolor{
-    height: 160px;
+    height: 230px;
     width: 270px;
-    margin-left: -101px;
-    margin-top: -5px;
+    margin-left: -100px;
+    margin-top: -4px;
  }
  .fourthcolor h2{
-    font-size: 12px;
+    font-size: 16px;
     margin-top: 30px;
-    margin-left: 60px;
-    width: 150px;
+    margin-left: 20px;
+    width: 220px;
+    letter-spacing: -1px;
  }
  .fourthcolor h3{
-    font-size: 12px;
+    font-size: 16px;
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: -100px;
  }
  .fifteenparent{
     max-width: 280px;
@@ -836,6 +859,10 @@ margin-top: -300px;
  font-size: 13px;
  margin-top: 20px;
  margin-left: 10px;
+ }
+ .sign{
+   margin-left: 11px;
+   margin-top: -93px;
  }
  .college input{
    width: 165px;
@@ -887,7 +914,6 @@ margin-top: -300px;
    margin-top: -2px;
    width: 200px;
  }
-   
  .secondicon{
     width: 250px;
     margin-top: 60px;
